--- a/wpf-tmca/wpf-tmca.csproj
+++ b/wpf-tmca/wpf-tmca.csproj
@@ -76,6 +76,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="View\Adorners\MoveAdorner.cs" />
+    <Compile Include="View\Behaviors\DragBehavior.cs" />
+    <Compile Include="View\Behaviors\PositionTransfer.cs" />
     <Compile Include="View\UserControls\Association.xaml.cs">
       <DependentUpon>Association.xaml</DependentUpon>
     </Compile>
