--- a/wpf-tmca.Model/wpf-tmca.Model.csproj
+++ b/wpf-tmca.Model/wpf-tmca.Model.csproj
@@ -63,7 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="EItem.cs" />
     <Compile Include="ELine.cs" />
+    <Compile Include="IItem.cs" />
     <Compile Include="ILine.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
