--- a/wpf-tmca.Model/wpf-tmca.Model.csproj
+++ b/wpf-tmca.Model/wpf-tmca.Model.csproj
@@ -67,6 +67,8 @@
     <Compile Include="ELine.cs" />
     <Compile Include="IItem.cs" />
     <Compile Include="ILine.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Line.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
