--- a/wpf-tmca.Model/wpf-tmca.Model.csproj
+++ b/wpf-tmca.Model/wpf-tmca.Model.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Diagram.cs" />
     <Compile Include="EItem.cs" />
     <Compile Include="ELine.cs" />
     <Compile Include="IItem.cs" />
