--- a/wpf-tmca.Model/wpf-tmca.Model.csproj
+++ b/wpf-tmca.Model/wpf-tmca.Model.csproj
@@ -68,11 +68,11 @@
     </Compile>
     <Compile Include="Diagram.cs" />
     <Compile Include="EItem.cs" />
-    <Compile Include="ELine.cs" />
+    <Compile Include="EAssociation.cs" />
     <Compile Include="IItem.cs" />
-    <Compile Include="ILine.cs" />
+    <Compile Include="IAssociation.cs" />
     <Compile Include="Item.cs" />
-    <Compile Include="Line.cs" />
+    <Compile Include="Association.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
