--- a/wpf-tmca/wpf-tmca.csproj
+++ b/wpf-tmca/wpf-tmca.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Controller\Exit\ExitController.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\Items\ItemViewModel.cs" />
+    <Compile Include="ViewModel\Items\TextBoxItem.cs" />
     <Compile Include="View\Adorners\MoveAdorner.cs" />
     <Compile Include="View\Behaviors\DragBehavior.cs" />
     <Compile Include="View\Behaviors\PositionTransfer.cs" />
