--- a/wpf-tmca/wpf-tmca.csproj
+++ b/wpf-tmca/wpf-tmca.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Controller\Exit\ExitController.cs" />
     <Compile Include="Controller\ViewController.cs" />
     <Compile Include="EItemStatus.cs" />
+    <Compile Include="ViewModel\Associations\AssociationViewModel.cs" />
+    <Compile Include="ViewModel\Associations\DependencyViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\ItemsCollection.cs" />
     <Compile Include="ViewModel\Items\ClassViewModel.cs" />
