SaveLoadController skal testes

--- a/wpf-tmca/wpf-tmca.csproj
+++ b/wpf-tmca/wpf-tmca.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Controller\Exit\ExitController.cs" />
     <Compile Include="Controller\ViewController.cs" />
     <Compile Include="EItemStatus.cs" />
+    <Compile Include="SaveAndLoad\SaveLoadController.cs" />
     <Compile Include="ViewModel\Associations\AssociationViewModel.cs" />
     <Compile Include="ViewModel\Associations\DependencyViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
